Add Create.php - use Data helper to organize the logic Add create.phtml - restaurant form template Add Data.php - implement calculateEntityIdValue method - implement createRestaurant - use restaurantRepository, timezone and builder to organize the logic Add di.xml - create preference for RestaurantRepository Update index.phtml - move into restaurants folder - add link to create controller Update InstallSchema.php - replace id with entity_id Update Restaurant.php - remove setters and getters from mode class Add RestaurantBuilder.php - add proper setters for Restaurant model - implement build method Update RestaurantRepository.php - change save method Param Add RestaurantRepositoryInterface.php Update RestaurantsData.php - add RestaurantRepositoryInterface in logic Add stoyanov_restaurant_create.xml - add template logic Update stoyanov_restaurant_index.xml - move into restaurants folder

--- a/app/code/Stoyanov/Restaurants/view/frontend/templates/restaurants/index.phtml
+++ b/app/code/Stoyanov/Restaurants/view/frontend/templates/restaurants/index.phtml
@@ -20,4 +20,8 @@
         <?php endif; ?>
     -------------------------------------------------------
     <?php endforeach; ?>
+    <p>
+        <a href="<?= $this->getUrl('stoyanov/restaurant/create') ?>"><?= __('Create a new restaurant') ?></a>
+    </p>
+
 <?php endif;?>
