Update Create controller - clear old logic Update Data.php - remove id logic Add db_schema.xml Add db_schema_whitelist.json Update edit.phtml - use entity_id in template Delete InstallSchema.php Update RestaurantBuilder.php - remove setId method Update RestaurantBuilderInterface.php - remove setId method

--- a/app/code/Stoyanov/Restaurants/view/frontend/templates/restaurants/edit.phtml
+++ b/app/code/Stoyanov/Restaurants/view/frontend/templates/restaurants/edit.phtml
@@ -12,7 +12,7 @@ $restaurant = $block->getRestaurant();
 
     <?= $block->getBlockHtml('formkey'); ?> <!-- CSRF protection -->
 
-    <input type="hidden" name="id" value="<?= $restaurant->getEntityId() ?>" />
+    <input type="hidden" name="entity_id" value="<?= $restaurant->getEntityId() ?>" />
 
     <div>
         <label for="name">Name:</label>
