Update Create controller - add entity_id in logic Update Data.php - extend createOrUpdateRestaurant method logic - implement deleteRestaurant method Update index.phtml - add edit link in template Update RestaurantRepository.php - switch RestaurantInterface in logic Update RestaurantRepositoryInterface delete method signature

--- a/app/code/Stoyanov/Restaurants/view/frontend/templates/restaurants/index.phtml
+++ b/app/code/Stoyanov/Restaurants/view/frontend/templates/restaurants/index.phtml
@@ -18,6 +18,11 @@
             <p><?= __('Created at') ?></p>
             <p><b><?= $restaurant->getCreatedAt() ?></b></p>
         <?php endif; ?>
+        <p>
+            <a href="<?= $this->getUrl('stoyanov/restaurant/edit', ['id' => $restaurant->getId()]) ?>">
+            <?= __('Edit') ?>
+            </a>
+        </p>
     -------------------------------------------------------
     <?php endforeach; ?>
     <p>
