Update Create.php - add RequestRestaurantInterface in logic Update di.xml - add RestaurantRequestInterface Update Edit.php - use Helper in logic - refactor getRestaurant method Update RequestRestaurant - use RequestRestaurantInterface - rename method to createOrUpdate - rename method to build Add RequestRestaurantInterface Delete RestaurantRequestInterface Update stoyanov_restaurant_create.xml - refactor block Update Update.php - use RequestRestaurantInterface in logic

--- a/app/code/Stoyanov/Restaurants/view/frontend/layout/stoyanov_restaurant_create.xml
+++ b/app/code/Stoyanov/Restaurants/view/frontend/layout/stoyanov_restaurant_create.xml
@@ -2,8 +2,7 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="1column" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceContainer name="content">
-            <block class="Magento\Framework\View\Element\Template" name="create_restaurant" template="Stoyanov_Restaurants::restaurants/create.phtml">
-            </block>
+            <block class="Magento\Framework\View\Element\Template" name="create_restaurant" template="Stoyanov_Restaurants::restaurants/create.phtml" />
         </referenceContainer>
     </body>
 </page>
