Update create.phtml - change directory - change url Update Edit.php - add restaurants in url logic Update Edit.php Add Admin Edit controller Add edit.phtml Update edit.phtml Update index.phtml - move file - update url Update menu.xml - remove section Update restaurants_restaurant_create.xml - change folder Update restaurants_restaurant_edit.xml - change folder Add restaurants_restaurant_edit.xml Update restaurants_restaurant_index - change folder Rename restaurants_restaurant_index.xml Update routes.xml - change front name value Add admin Update controller

--- a/app/code/Stoyanov/Restaurants/view/adminhtml/layout/restaurants_restaurant_edit.xml
+++ b/app/code/Stoyanov/Restaurants/view/adminhtml/layout/restaurants_restaurant_edit.xml
@@ -5,7 +5,7 @@
         <referenceContainer name="content">
             <block class="Stoyanov\Restaurants\Block\Restaurant\Edit"
                    name="restaurant_edit"
-                   template="Stoyanov_Restaurants::restaurants/edit.phtml"/>
+                   template="Stoyanov_Restaurants::restaurant/edit.phtml"/>
         </referenceContainer>
     </body>
 </page>
