Update acl.xml - add restaurants_create Add Create admin controller Add create.phtml Update index.phtml - use restaurants in url Update index.phtml - add showPaging in logic Update menu.xml - add Stoyanov_Restaurants::restaurants_create in logic Add restaurants_restaurant_create.xml Update RestaurantsData.php - implement showPaging method Update system.xml - add minimum_size in logic Update Update.php - use addSuccessMessage in logic Update Update.php - use restaurants

--- a/app/code/Stoyanov/Restaurants/view/frontend/templates/restaurant/index.phtml
+++ b/app/code/Stoyanov/Restaurants/view/frontend/templates/restaurant/index.phtml
@@ -28,9 +28,13 @@
     <p>
         <a href="<?= $this->getUrl('restaurants/restaurant/create') ?>"><?= __('Create a new restaurant') ?></a>
     </p>
-<div class="paging">
-    <a href="?p=<?php echo $viewModel->getPrevPage();  ?>"><?= __('Prev page') ?></a>
-    <a href="?p=<?php echo $viewModel->getNextPage(); ?>"><?= __('Next page') ?></a>
-</div>
+
+    <?php if($viewModel->showPaging()) : ?>
+        <div class="paging">
+            <a href="?p=<?php echo $viewModel->getPrevPage();  ?>"><?= __('Prev page') ?></a>
+            <a href="?p=<?php echo $viewModel->getNextPage(); ?>"><?= __('Next page') ?></a>
+        </div>
+    <?php endif; ?>
+
 
 <?php endif;?>
