Update Create.php - change message Add Delete Block Add Delete controller Add delete.phtml - add html form for delete process Update index.phtml - add Delete link Add restaurants_restaurant_delete.xml - use Delete block in layout Update Admin Update controller - change message Upadte Front Update controller - change message

--- a/app/code/Stoyanov/Restaurants/view/frontend/templates/restaurant/index.phtml
+++ b/app/code/Stoyanov/Restaurants/view/frontend/templates/restaurant/index.phtml
@@ -23,6 +23,11 @@
             <?= __('Edit') ?>
             </a>
         </p>
+        <p>
+            <a href="<?= $this->getUrl('restaurants/restaurant/delete', ['id' => $restaurant->getId()]) ?>">
+                <?= __('Delete') ?>
+            </a>
+        </p>
     -------------------------------------------------------
     <?php endforeach; ?>
     <p>
