Update delete.phtml - change name Update edit.phtml - change name

--- a/app/code/Stoyanov/Restaurant/view/frontend/templates/restaurant/delete.phtml
+++ b/app/code/Stoyanov/Restaurant/view/frontend/templates/restaurant/delete.phtml
@@ -3,7 +3,7 @@
 </p>
 <h1><?= __("Restaurant's edit page") ?></h1>
 <?php
-/** @var $block \Stoyanov\Restaurants\Block\Restaurant\Edit */
+/** @var $block \Stoyanov\Restaurant\Block\Restaurant\Edit */
     $restaurant = $block->getRestaurant();
 ?>
 <form action="<?= $block->escapeUrl($block->getFormAction()) ?>"
