Update acl.xml - change configuration Update Create.php - move open bracket on new line Update create.phtml - replace this with block Update Data.php - move open bracket on new line Update DataProvider.php - move open bracket on new line - use array for loadedData initialization Update Delete.php - edit getButtonData method logic Update Delete.php - move open bracket on new line Update Delete.php - move open bracket on new line Update delete.phtml - replace this with block Update di.xml - add virtualType for listing component Edit.php - move open bracket on new line Edit.php - move open bracket on new line Update edit.phtml - replace this with block Update Generic.php - move open bracket on new line Update Index.php - move open bracket on new line - change active menu value Update Index.php - move open bracket on new line Update index.phtml - replace this with block Update MassDelete.php - edit __construct Update menu.xml - replace Stoyanov_Restaurant::stoyanov with Stoyanov_Restaurant::restaurant Update NewAction.php - move open bracket on new line Update RequestRestaurant.php - move open bracket on new line Update Restaurant.php - add const MAIN_TABLE and use it in logic - add const ID_FIELD_NAME and use it in logic Update RestaurantActions.php - move open bracket on new line - edit prepareDataSource method logic Update RestaurantCreatedObserver - move open bracket on new line - edit execute method logic Delete RestaurantDataProvider Update RestaurantManager - move open bracket on new line Update RestaurantRepository - move open bracket on new line Update restaurants_restaurant_listing.xml - edit logic Update RestaurantsData - move open bracket on new line Update RestaurantTest - add dock block Update Update.php - move open bracket on new line

--- a/app/code/Stoyanov/Restaurant/view/frontend/templates/restaurant/create.phtml
+++ b/app/code/Stoyanov/Restaurant/view/frontend/templates/restaurant/create.phtml
@@ -1,5 +1,5 @@
 <p>
-    <a href="<?= $this->getUrl('restaurants/restaurant/index') ?>"><?= __('Our Restaurants') ?></a>
+    <a href="<?= $block->getUrl('restaurants/restaurant/index') ?>"><?= __('Our Restaurants') ?></a>
 </p>
 <h1><?= __('Create a new restaurant') ?></h1>
 
