Update Back.php - add method dock block Update Collection.php - add method dock block - add property dock block Update Create.php - add one use per class name Update create.phtml - replace this with block Update Data.php - remove constructor logic - add method dock block - update const initialization Update DataProvider.php - add method dock block - add property dock block Update Delete.php - add method dock block Update Delete.php - add method dock block - add one use per class name Update Delete.php - add one use per class name - add method dock block - use repository for delete process Update Delete.php - add one use per class name - add method dock block - use repository for delete process Update delete.phtml - use $escaper instead $block Update Edit.php - add one use per class name - add method dock block - edit getFormAction method logic Update Edit.php - add one use per class name - add method dock block - edit setActiveMenu value Update Edit.php - add one use per class name - add method dock block Update edit.phtml - replace $block with $escaper Update FormInterface.php - add method dock block Update Generic.php - add one use per class name - add method dock block Update Index.php - add method dock block - add one use per class name - change const initialization Update Index.php - add one use per class name - add method dock block Update index.phtml Update MassDelete.php - add one use per class name - add method dock block - add missed class properties types Update NewAction.php - add one use per class name - add method dock block Update RequestRestaurant.php - add one use per class name - add method dock block Update RequestRestaurantInterface.php - add method dock block Update Restaurant.php - change const initialization Update Restaurant.php - add method dock block Update RestaurantActions.php - change const initialization - add method dock block Update RestaurantBuilder.php - add method dock block Update RestaurantBuilderInterface - add method dock block

--- a/app/code/Stoyanov/Restaurant/view/frontend/templates/restaurant/edit.phtml
+++ b/app/code/Stoyanov/Restaurant/view/frontend/templates/restaurant/edit.phtml
@@ -6,7 +6,7 @@
 /** @var $block \Stoyanov\Restaurant\Block\Restaurant\Edit */
     $restaurant = $block->getRestaurant();
 ?>
-<form action="<?= $block->escapeUrl($block->getFormAction()) ?>"
+<form action="<?= $escaper->escapeUrl($block->getFormAction()) ?>"
       method="post"
       data-mage-init='{"validation":{}}'>
 
@@ -17,7 +17,7 @@
     <div>
         <label for="name">Name:</label>
         <input type="text" name="name" id="name"
-               value="<?= $block->escapeHtml($restaurant->getName()) ?>" required/>
+               value="<?= $escaper->escapeHtml($restaurant->getName()) ?>" required/>
     </div>
 
     <div>
@@ -29,7 +29,7 @@
     <div>
         <label for="location">Location:</label>
         <input type="text" name="location" id="location"
-               value="<?= $block->escapeHtml($restaurant->getLocation()) ?>" required/>
+               value="<?= $escaper->escapeHtml($restaurant->getLocation()) ?>" required/>
     </div>
 
     <button type="submit">Save</button>
